[package]
name = "rust-code-metric"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xlsxwriter = "0.6.0"
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["derive"] }
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.3"